gitlab-ce/kubernetes/gitlab-statfulset-rbd.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab-ce
  namespace: default
  labels:
    app: gitlab-ce
spec:
  selector:
    matchLabels:
      app: gitlab-ce
  serviceName: gitlab-ce
  replicas: 1
  #minReadySeconds: 60     #滚动升级时60s后认为该pod就绪
  template:
    metadata:
      labels:
        app: gitlab-ce
      annotations:
        #net.ipv4.tcp_syncookies=0 need kernel version 4.4 or newer
        security.alpha.kubernetes.io/sysctls: net.ipv4.ip_local_port_range=10000 65535
        #sysctl net.core.somaxconn need privileges
        security.alpha.kubernetes.io/unsafe-sysctls: net.core.somaxconn=65535,net.ipv4.tcp_tw_reuse=1,net.ipv4.tcp_fin_timeout=30,net.ipv4.tcp_keepalive_intvl=4,net.ipv4.tcp_keepalive_probes=3,net.ipv4.tcp_keepalive_time=120,net.ipv4.tcp_max_syn_backlog=65535,net.ipv4.tcp_max_tw_bucket=262144
    spec:
      terminationGracePeriodSeconds: 60 ##k8s将会给应用发送SIGTERM信号，可以用来正确、优雅地关闭应用,默认为30秒
      #从私有仓库下载镜像
      #imagePullSecrets:
      #- name: registrykey-ali-ext
      containers:
      - name: gitlab-ce
        image: slpcat/gitlab-ce
        imagePullPolicy: Always
        livenessProbe: #kubernetes认为该pod是存活的,不存活则需要重启
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 60 # equals to the maximum startup time of the application + couple of seconds
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe: #kubernetes认为该pod是启动成功的
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30 # equals to minimum startup time of the application
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        resources:
          # keep request = limit to keep this container in guaranteed class
          requests:
            cpu: 1000m
            memory: 2Gi
          limits:
            cpu: 8000m
            memory: 8Gi
        ports:
          - name: ssh
            containerPort: 22
          - name: web
            containerPort: 80
          - name: ldap
            containerPort: 636
          - name: registry
            containerPort: 5000
        volumeMounts:
          - name: gitlab-etc
            mountPath: "/etc/gitlab"
          - name: gitlab-data
            mountPath: "/var/opt/gitlab"
      volumes:
        - name: gitlab-etc
          configMap:
            name: gitlab-etc-configmap
            #Add ConfigMap data to a specific path in the Volume
            items:
            - key: gitlab.rb
              path: gitlab.rb
  volumeClaimTemplates:
  - metadata:
      name: gitlab-data
    spec:
      accessModes:
      - ReadWriteOnce
      #ceph rbd storageclass
      storageClassName: rbd
      resources:
        requests:
          storage: 20Gi
