gitlab-ce/kubernetes/gitlab-statfulset.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: StatefulSet
metadata:
  name: gitlab-ce
  namespace: default
  labels:
    app: gitlab-ce
spec:
  selector:
    matchLabels:
      app: gitlab-ce
  serviceName: gitlab-ce
  replicas: 1
#  minReadySeconds: 60     #滚动升级时60s后认为该pod就绪
  template:
    metadata:
      labels:
        app: gitlab-ce
    spec:
      terminationGracePeriodSeconds: 60 ##k8s将会给应用发送SIGTERM信号，可以用来正确、优雅地关闭应用,默认为30秒
      imagePullSecrets:
      - name: registrykey-ali-ext
      containers:
      - name: gitlab-ce
        image: slpcat/gitlab-ce
        imagePullPolicy: Always
        livenessProbe: #kubernetes认为该pod是存活的,不存活则需要重启
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 60 ## equals to the maximum startup time of the application + couple of seconds
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe: #kubernetes认为该pod是启动成功的
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30 ## equals to minimum startup time of the application
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        resources:
          # keep request = limit to keep this container in guaranteed class
          requests:
            cpu: 1000m
            memory: 2Gi
          limits:
            cpu: 8000m
            memory: 8Gi
        ports:
          - name: ssh
            containerPort: 22
          - name: web
            containerPort: 80
          - name: ldap
            containerPort: 636
          - name: registry
            containerPort: 5000
        volumeMounts:
          - name: gitlab-etc
            mountPath: "/etc/gitlab"
          - name: gitlab-log
            mountPath: "/var/log/gitlab"
          - name: gitlab-data
            mountPath: "/var/opt/gitlab"
      volumes:
        - name: gitlab-etc
          persistentVolumeClaim:
            claimName: gitlab-etc-claim
        - name: gitlab-log
          persistentVolumeClaim:
            claimName: gitlab-log-claim
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-data-claim
